Make XUL elements implement nsIDOMElementCSSInlineStyle.  Bug 336096, patch by Alex Vincent <ajvincent@gmail.com>, r+sr=sicking